Changes to Version 2.1-0

  o Improved R-code generated by many dialogs (mostly implemented by Kosar Karimi-Pour)

  o Added effect-plots dialog (was invoked directly from Model > Graphs menu).

  o Check for functioning Java on 64-bit Windows to load import-from-Excel menu item (issue reported by Kosar Karimi-Pour).

  o Added option to set ttk theme.

  o Moved non-GUI-related statistical, graphics, and data management functions to the new RcmdrMisc package (suggestion of Liviu Andronic).

Changes to Version 2.0-5

  o New Basque translation (courtesy of Jose Ramon Rueda).

Changes to Version 2.0-4

  o Updated Slovenian translation (with thanks to Jaro.Lajovic and Matjaz Jeran).

  o Fixed numSummary() so that it doesn't fail when there's an empty factor level (problem reported by Alan Mainwaring).

  o ActiveDataSet(NULL) now removes the active data set.

Changes to Version 2.0-3

  o Updated Polish translation (with thanks to Lukasz Daniel).

  o titleLabel() to format a label in title font and color; exported for plug-ins.

  o Added histograms by group (suggestion of Sarah Dawson).

  o Small interface improvements.

  o Fixed bug in French translation preventing loading R Markdown files (reported by J. Mazet).

Changes to Version 2.0-2

  o Moved knitr and markdown packages to Suggests: (suggestion of Dirk Eddelbuettel).

  o Updated Japanese translation of Getting Started manual (by Takaharu Araki).

  o Added editing buttons with tooltips to Rcmdr editor.

  o Added Mac OS X command-key combinations.

  o Tweaks to ttk theme and font handling (with help of Philippe Grosjean and the tcltk2 package).

  o Small bug fixes.

Changes to Version 2.0-1

  o Caching of variable names, factor names, etc., to improve menu refreshes in large data sets (in response to observation of Yoshinobu Kanda).

  o Updated translations (with thanks to the translators): French (Milan Bouchet-Valat), Japanese (Takaharu Araki).
